# eigen-playground

./: .gitignore  CMakeLists.txt  README.md
aligned_allocation/: CMakeLists.txt  basics.cpp  custom_aligned_allocator.cpp
eigen_minimal/: CMakeLists.txt  eigen_minimal.cpp  eigen_minimal.md
expression_templates/: CMakeLists.txt  dynamic_vector_addition.cpp
simd/: CMakeLists.txt  avx_vector_addition.cpp  check_gcc_intel_simd.cpp
valgrind/: CMakeLists.txt  README.md  valgrind_example.cpp
vector_addition/: CMakeLists.txt  vector_addition.cpp
vector_implementations/: CMakeLists.txt  bench_array.hpp  naive_vector.cpp  naive_vector.hpp
